k8s/bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: bot
  template:
    metadata:
      labels:
        component: bot
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: bot
          image: ghcr.io/tashima42/awa-bot:main
          imagePullPolicy: "Always"
