k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: awa-bot
spec:
  ports:
    - name: api-service
      port: 8096
      targetPort: 8096
  selector:
    component: api
