k8s/api-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingressroute
  namespace: awa-bot
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host("awa.tashima.space")
      services:
        - name: api-service
          port: 8096
